@@ -176,27 +176,6 @@ Sample ParametricEvaluation::operator() (const Sample & inSample) const
   return output;
 }
 
-Sample ParametricEvaluation::operator() (const Point & point,
-    const Sample & parameters)
-{
-  LOGWARN("ParametricEvaluation::operator()(point,parameters) is deprecated, use setParameter(parameters) and operator()(point)");
-  const UnsignedInteger size = parameters.getSize();
-  const UnsignedInteger inputDimension = function_.getInputDimension();
-  const UnsignedInteger pointDimension = inputPositions_.getSize();
-  const UnsignedInteger parametersDimension = getParameterDimension();
-  if (point.getDimension() != pointDimension) throw InvalidArgumentException(HERE) << "Error: expected a point of dimension=" << pointDimension << ", got dimension" << point.getDimension();
-  if (parameters.getDimension() != parametersDimension) throw InvalidArgumentException(HERE) << "Error: expected parameters of dimension=" << parametersDimension << ", got dimension=" << parameters.getDimension();
-  Sample input(size, inputDimension);
-  for (UnsignedInteger i = 0; i < size; ++i)
-  {
-    for (UnsignedInteger j = 0; j < parametersDimension; ++j) input(i, parametersPositions_[j]) = parameters(i, j);
-    for (UnsignedInteger j = 0; j < pointDimension; ++j) input(i, inputPositions_[j]) = point[j];
-  }
-  const Sample output(function_(input));
-  callsNumber_.fetchAndAdd(size);
-  return output;
-}
-
 /* Parameters accessor */
 void ParametricEvaluation::setParameter(const Point & parameters)
 {
