@@ -59,32 +59,6 @@ ParametricGradient * ParametricGradient::clone() const
 }
 
 /* Gradient operator */
-Matrix ParametricGradient::gradient(const Point & point,
-                                    const Point & parameters) const
-{
-  LOGWARN("ParametricGradient::gradient(point,parameters) is deprecated, use setParameter(parameters) and gradient(point)");
-  const UnsignedInteger parametersDimension = parameters.getDimension();
-  if (parametersDimension != p_evaluation_->getParametersPositions().getSize()) throw InvalidArgumentException(HERE) << "Error: expected a parameters of dimension=" << p_evaluation_->getParametersPositions().getSize() << ", got dimension=" << parametersDimension;
-  const UnsignedInteger inputDimension = p_evaluation_->getFunction().getInputDimension();
-  const UnsignedInteger pointDimension = point.getDimension();
-  if (pointDimension + parametersDimension != inputDimension) throw InvalidArgumentException(HERE) << "Error: expected a point of dimension=" << inputDimension - parametersDimension << ", got dimension=" << pointDimension;
-  Point x(inputDimension);
-  for (UnsignedInteger i = 0; i < parametersDimension; ++i) x[p_evaluation_->parametersPositions_[i]] = parameters[i];
-  for (UnsignedInteger i = 0; i < pointDimension; ++i) x[p_evaluation_->inputPositions_[i]] = point[i];
-  const UnsignedInteger outputDimension = getOutputDimension();
-  const Matrix fullGradient(p_evaluation_->getFunction().gradient(x));
-  // The gradient wrt x corresponds to the inputPositions rows of the full gradient
-  Matrix result(pointDimension, outputDimension);
-  for (UnsignedInteger i = 0; i < pointDimension; ++i)
-  {
-    const UnsignedInteger i0 = p_evaluation_->inputPositions_[i];
-    for (UnsignedInteger j = 0; j < outputDimension; ++j)
-      result(i, j) = fullGradient(i0, j);
-  }
-  return result;
-}
-
-/* Gradient operator */
 Matrix ParametricGradient::gradient(const OT::Point & point) const
 {
   const UnsignedInteger parametersDimension = p_evaluation_->getParameterDimension();
