@@ -93,14 +93,6 @@ public:
   /** Operator () on a time series, not pure virtual because a generic implementation is given */
   virtual Field operator() (const Field & inField) const;
 
-  /* @deprecated */
-  virtual Point operator() (const Point & inP,
-                            const Point & parameters);
-
-  /* @deprecated */
-  virtual Sample operator() (const Point & point,
-                             const Sample & parameters);
-
   /** Accessor for input point dimension */
   virtual UnsignedInteger getInputDimension() const;
 
