@@ -122,35 +122,15 @@ public:
 
   Field operator() (const Field & inTS) const;
 
-  /* @deprecated */
-  Point operator() (const Point & inP,
-                    const Point & parameter);
-
-  /* @deprecated */
-  Sample operator() (const Point & point,
-                     const Sample & parameters);
-
-
   /** Method gradient() returns the Jacobian transposed matrix of the function at point */
   Matrix gradient(const Point & inP) const;
 
-  /* @deprecated */
-  Matrix gradient(const Point & inP,
-                  const Point & parameters);
 
   /** Method hessian() returns the symmetric tensor of the function at point */
   SymmetricTensor hessian(const Point & inP) const;
 
-  /* @deprecated */
-  SymmetricTensor hessian(const Point & inP,
-                          const Point & parameters);
-
   /** Gradient according to the marginal parameters */
   virtual Matrix parameterGradient(const Point & inP) const;
-
-  /* @deprecated */
-  virtual Matrix parameterGradient(const Point & inP,
-                                   const Point & parameters);
 
   /** Parameters value accessor */
   virtual Point getParameter() const;
