@@ -81,10 +81,6 @@ public:
   /** Gradient method */
   virtual Matrix gradient(const Point & inP) const;
 
-  /* @deprecated */
-  virtual Matrix gradient(const Point & inP,
-                          const Point & parameters);
-
   /** Accessor for input point dimension */
   virtual UnsignedInteger getInputDimension() const;
 
