@@ -78,10 +78,6 @@ public:
   /** Hessian method */
   virtual SymmetricTensor hessian(const Point & inP) const;
 
-  /* @deprecated */
-  virtual SymmetricTensor hessian(const Point & inP,
-                                  const Point & parameter);
-
   /** Accessor for input point dimension */
   virtual UnsignedInteger getInputDimension() const;
 
