@@ -58,10 +58,6 @@ public:
   using HessianImplementation::hessian;
   SymmetricTensor hessian(const Point & point) const;
 
-  /* @deprecated */
-  SymmetricTensor hessian(const Point & point,
-                          const Point & parameters) const;
-
   /** Evaluation accessor */
   Evaluation getEvaluation() const;
 
